--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.7",
+    "ts-loader": "^2.2.2",
+    "tslib": "^1.7.1",
+    "typescript": "^2.4.1",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.18.2",
