--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "hot-server",
   "version": "0.0.1",
-  "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "author": "",
   "dependencies": {
+    "@types/express": "^4.0.36",
+    "@types/node": "^8.0.9",
+    "@types/react": "^15.0.35",
+    "@types/react-dom": "^15.5.1",
+    "@types/webpack": "^3.0.2",
+    "@types/webpack-dev-middleware": "^1.9.1",
+    "@types/webpack-hot-middleware": "^2.15.0",
+    "awesome-typescript-loader": "^3.2.1",
     "express": "^4.14.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.7",
+    "source-map-loader": "^0.2.1",
     "ts-loader": "^2.2.2",
+    "ts-node": "^3.2.0",
     "tslib": "^1.7.1",
     "typescript": "^2.4.1",
-    "webpack": "^1.13.2",
+    "webpack": "^3.1.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.18.2",
-    "webpack-hot-server-middleware": "^0.1.0"
+    "webpack-hot-server-middleware": "^0.1.0",
+    "webpack-node-externals": "^1.6.0"
   }
 }
