--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^8.0.9",
     "@types/react": "^15.0.35",
     "@types/react-dom": "^15.5.1",
+    "@types/react-hot-loader": "^3.0.3",
     "@types/webpack": "^3.0.2",
     "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack-hot-middleware": "^2.15.0",
