--- a/package.json
+++ b/package.json
@@ -2,24 +2,35 @@
   "name": "hot-server",
   "version": "0.0.1",
   "scripts": {
-    "start": "node index.js",
-    "build": "webpack"
+    "clean": "rimraf dist",
+    "start": "NODE_ENV=development node index.js",
+    "start:prod": "NODE_ENV=production node index.js",
+    "prebuild": "npm run clean",
+    "build": "webpack",
+    "build:prod": "NODE_ENV=production npm run build"
   },
-  "author": "",
+  "author": "Mohsen Azimi <me@azimi.me>",
   "dependencies": {
     "@types/express": "^4.0.36",
+    "@types/html-webpack-plugin": "^2.28.0",
+    "@types/lodash": "^4.14.68",
     "@types/node": "^8.0.9",
     "@types/react": "^15.0.35",
     "@types/react-dom": "^15.5.1",
     "@types/react-hot-loader": "^3.0.3",
+    "@types/serve-static": "^1.7.31",
     "@types/webpack": "^3.0.2",
     "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack-hot-middleware": "^2.15.0",
     "awesome-typescript-loader": "^3.2.1",
     "express": "^4.14.0",
+    "html-webpack-plugin": "^2.29.0",
+    "lodash": "^4.17.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.7",
+    "rimraf": "^2.6.1",
+    "serve-static": "^1.12.3",
     "source-map-loader": "^0.2.1",
     "ts-loader": "^2.2.2",
     "ts-node": "^3.2.0",
