--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "author": "Mohsen Azimi <me@azimi.me>",
   "dependencies": {
+    "@types/cheerio": "^0.22.2",
     "@types/express": "^4.0.36",
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/lodash": "^4.14.68",
@@ -23,6 +24,7 @@
     "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack-hot-middleware": "^2.15.0",
     "awesome-typescript-loader": "^3.2.1",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.29.0",
     "lodash": "^4.17.4",
@@ -40,6 +42,7 @@
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.18.2",
     "webpack-hot-server-middleware": "^0.1.0",
-    "webpack-node-externals": "^1.6.0"
+    "webpack-node-externals": "^1.6.0",
+    "webpack-stats-plugin": "^0.1.5"
   }
 }
