Use awesome-typescrit-loader for stateful hot reloads

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/webpack": "^3.0.2",
     "@types/webpack-dev-middleware": "^1.9.1",
     "@types/webpack-hot-middleware": "^2.15.0",
+    "@types/webpack-env": "^1.13.0",
     "awesome-typescript-loader": "^3.2.1",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.14.0",
@@ -34,7 +35,6 @@
     "rimraf": "^2.6.1",
     "serve-static": "^1.12.3",
     "source-map-loader": "^0.2.1",
-    "ts-loader": "^2.2.2",
     "ts-node": "^3.2.0",
     "tslib": "^1.7.1",
     "typescript": "^2.4.1",
