--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/express": "^4.0.36",
     "@types/html-webpack-plugin": "^2.28.0",
     "@types/lodash": "^4.14.68",
+    "@types/memory-fs": "^0.3.0",
     "@types/node": "^8.0.9",
     "@types/react": "^15.0.35",
     "@types/react-dom": "^15.5.1",
@@ -22,13 +23,14 @@
     "@types/serve-static": "^1.7.31",
     "@types/webpack": "^3.0.2",
     "@types/webpack-dev-middleware": "^1.9.1",
-    "@types/webpack-hot-middleware": "^2.15.0",
     "@types/webpack-env": "^1.13.0",
+    "@types/webpack-hot-middleware": "^2.15.0",
     "awesome-typescript-loader": "^3.2.1",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.29.0",
     "lodash": "^4.17.4",
+    "memory-fs": "^0.4.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.7",
