--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^15.0.35",
     "@types/react-dom": "^15.5.1",
     "@types/react-hot-loader": "^3.0.3",
+    "@types/react-router-dom": "^4.0.6",
     "@types/serve-static": "^1.7.31",
     "@types/webpack": "^3.0.2",
     "@types/webpack-dev-middleware": "^1.9.1",
@@ -34,6 +35,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.7",
+    "react-router-dom": "^4.1.1",
     "rimraf": "^2.6.1",
     "serve-static": "^1.12.3",
     "source-map-loader": "^0.2.1",
