--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "sourceMap": true,
         "outDir": "dist",
         "strict": true,
+        "baseUrl": "src",
         "types": [
             "node",
             "webpack-env"
