--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,15 @@
     "compilerOptions": {
         "target": "es5",
         "module": "esnext",
+        "moduleResolution": "node",
         "jsx": "react",
         "sourceMap": true,
         "outDir": "dist",
         "strict": true,
         "baseUrl": "src",
         "allowSyntheticDefaultImports": true,
+        "downlevelIteration": true,
+        "importHelpers": true,
         "lib": [
             "es2015",
             "dom"
