--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "html-webpack-plugin": "^2.29.0",
     "lodash": "^4.17.4",
     "memory-fs": "^0.4.1",
-    "react": "^15.3.2",
+    "react": "^15.6.1",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-loadable": "^4.0.3",
@@ -41,11 +41,12 @@
     "rimraf": "^2.6.1",
     "serve-static": "^1.12.3",
     "source-map-loader": "^0.2.1",
-    "string-replace-loader": "^1.3.0",
+    "string-replace-webpack-plugin": "^0.1.3",
     "ts-is-kind": "^1.0.0",
     "ts-node": "^3.2.0",
     "tslib": "^1.7.1",
     "typescript": "^2.4.1",
+    "universal-async-component": "^1.0.0",
     "webpack": "^3.1.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.18.2",
