--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "allowSyntheticDefaultImports": true,
         "downlevelIteration": true,
         "importHelpers": true,
+        "removeComments": false,
         "lib": [
             "es2015",
             "dom"
