--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "rimraf": "^2.6.1",
     "serve-static": "^1.12.3",
     "source-map-loader": "^0.2.1",
-    "string-replace-webpack-plugin": "^0.1.3",
+    "string-replace-loader": "^1.3.0",
     "ts-is-kind": "^1.0.0",
     "ts-node": "^3.2.0",
     "tslib": "^1.7.1",
